--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 HTML/CSS <span>DEVELOPER</span>
               </h1>
               <div class="button-row">
-                <button class="btn btn-primary">Hire me</button>
+                <button class="btn btn-primary button">Hire me</button>
                 <button class="btn btn-secondary">
                   <div class="btn__links">
                     <a
@@ -152,15 +152,12 @@
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </div>
                 <div class="overlay__btn btn-primary">
-                  Details
-                  <a
-                    href="https://github.com/Yulia-Chamlai/WK-portfolio"
-                    target="_blanks"
-                  ></a>
+                  <a href="https://github.com/Yulia-Chamlai/WK-portfolio">
+                    Details</a
+                  >
                 </div>
               </div>
             </div>
-
             <div class="works__item-wrapper">
               <div class="works__item">
                 <img src="./img/qd-center.png" alt="QD-Center" />
@@ -171,8 +168,9 @@
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </div>
                 <div class="overlay__btn btn-primary">
-                  Details
-                  <a href="https://github.com/Yulia-Chamlai/QD-Center"></a>
+                  <a href="https://github.com/Yulia-Chamlai/QD-Center">
+                    Details</a
+                  >
                 </div>
               </div>
             </div>
@@ -187,10 +185,9 @@
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </div>
                 <div class="overlay__btn btn-primary">
-                  Details
-                  <a
-                    href="https://github.com/Yulia-Chamlai/logoipsum-project"
-                  ></a>
+                  <a href="https://github.com/Yulia-Chamlai/logoipsum-project">
+                    Details</a
+                  >
                 </div>
               </div>
             </div>
@@ -205,10 +202,11 @@
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </div>
                 <div class="overlay__btn btn-primary">
-                  Details
                   <a
                     href="https://github.com/Yulia-Chamlai/The-power-of-simplicity"
-                  ></a>
+                  >
+                    Details</a
+                  >
                 </div>
               </div>
             </div>
@@ -223,8 +221,7 @@
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </div>
                 <div class="overlay__btn btn-primary">
-                  Details
-                  <a href="https://github.com/Yulia-Chamlai/Alivio"></a>
+                  <a href="https://github.com/Yulia-Chamlai/Alivio"> Details</a>
                 </div>
               </div>
             </div>
@@ -239,8 +236,9 @@
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </div>
                 <div class="overlay__btn btn-primary">
-                  Details
-                  <a href=" https://github.com/Yulia-Chamlai/Watch-project"></a>
+                  <a href=" https://github.com/Yulia-Chamlai/Watch-project">
+                    Details</a
+                  >
                 </div>
               </div>
             </div>
