--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                 HTML/CSS <span>DEVELOPER</span>
               </h1>
               <div class="button-row">
-                <button class="btn btn-primary button">Hire me</button>
+                <button class="btn btn-primary button">
+                  <a href="#contacts">Hire me</a>
+                </button>
                 <button class="btn btn-secondary">
                   <div class="btn__links">
                     <a
@@ -108,26 +110,6 @@
             <div class="main-screen__photo">
               <img src="./img/icons/man-main-screen.svg" alt="man" />
             </div>
-
-            <!--
-  <form>
-    <div class="form__data data">
-      <div class="data__name">
-        <label for="fname">Your name:</label>
-        <input type="text" id="fname" placeholder="Name" />
-      </div>
-      <div class="data__email">
-        <label for="email">Your e-mail:</label>
-        <input type="email" id="email" placeholder="Email" />
-      </div>
-      <div class="data__text">
-        <label for="msg">Your message:</label>
-        <textarea name="" id="msg" placeholder="Message"></textarea>
-      </div>
-      <button class="btn btn-primary">Send Message</button>
-    </div>
-  </form>
--->
           </div>
         </div>
       </section>
@@ -158,7 +140,7 @@
           <div class="works__list">
             <div class="works__item-wrapper">
               <div class="works__item">
-                <img src="./img/wk-portfolio.png" alt="WK" />
+                <img src="./img/wk-portfolio.jpg" alt="WK" />
               </div>
               <div class="overlay">
                 <div class="overlay__title">WK</div>
@@ -178,7 +160,7 @@
             </div>
             <div class="works__item-wrapper">
               <div class="works__item">
-                <img src="./img/qd-center.png" alt="QD-Center" />
+                <img src="./img/qd-center.jpg" alt="QD-Center" />
               </div>
               <div class="overlay">
                 <div class="overlay__title">QD-Center</div>
@@ -199,7 +181,7 @@
 
             <div class="works__item-wrapper">
               <div class="works__item">
-                <img src="./img/logoipsum.png" alt="Logoipsum" />
+                <img src="./img/logoipsum.jpg" alt="Logoipsum" />
               </div>
               <div class="overlay">
                 <div class="overlay__title">Logoipsum</div>
@@ -220,7 +202,7 @@
 
             <div class="works__item-wrapper">
               <div class="works__item">
-                <img src="./img/the power.png" alt="Power" />
+                <img src="./img/the power.jpg" alt="Power" />
               </div>
               <div class="overlay">
                 <div class="overlay__title">The power</div>
@@ -241,7 +223,7 @@
 
             <div class="works__item-wrapper">
               <div class="works__item">
-                <img src="./img/alivio.png" alt="Alivio" />
+                <img src="./img/alivio.jpg" alt="Alivio" />
               </div>
               <div class="overlay">
                 <div class="overlay__title">Alivio</div>
@@ -262,7 +244,7 @@
 
             <div class="works__item-wrapper">
               <div class="works__item">
-                <img src="./img/watch-project.png" alt="Watch" />
+                <img src="./img/watch-project.jpg" alt="Watch" />
               </div>
               <div class="overlay">
                 <div class="overlay__title">Watch</div>
