--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@
               <p class="about__info-desc">
                 Hi, I'm Yulia, cerificated html/css entry-level front-end
                 developer with 6 months of experience in maintaining and
-                building web pages. Seeking for new opportunities and challenges
-                that will expand my skill set. As a person who is starting out,
-                I am constantly seeking for new ways to grow and expand my
-                skills. I know how to transform your design into a code with
-                ease. If you interested in my help than follow to section
+                building web pages. As a person who is starting out, I am
+                constantly seeking for new ways to grow and expand my skills. I
+                have finished HTML/CSS/JS courses which helped me gain valuable
+                skills set in creating sites. I know how to transform your
+                design into a code with ease. If you interested in my help than
+                follow to section
                 <a href="#contacts">"Contact me"</a> .
               </p>
             </div>
