--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
             <nav id="nav" class="header-nav nav">
               <ul class="header-nav__ul">
                 <li class="header-nav__li">
-                  <a
-                    href="#"
-                    class="header-nav__a _active"
-                    onclick="navToggle()"
+                  <a href="#" class="header-nav__a _active" onclick="navClose()"
                     >Home</a
                   >
                 </li>
@@ -56,7 +53,7 @@
                     href="#about"
                     i
                     class="header-nav__a _active"
-                    onclick="navToggle()"
+                    onclick="navClose()"
                     >About Me</a
                   >
                 </li>
@@ -64,7 +61,7 @@
                   <a
                     href="#works"
                     class="header-nav__a _active"
-                    onclick="navToggle()"
+                    onclick="navClose()"
                     >Projects</a
                   >
                 </li>
@@ -72,7 +69,7 @@
                   <a
                     href="#contacts"
                     class="header-nav__a _active"
-                    onclick="navToggle()"
+                    onclick="navClose()"
                     >Contact me</a
                   >
                 </li>
@@ -104,10 +101,14 @@
                 <button class="btn btn-secondary">
                   <div class="btn__links">
                     <a
-                      href="./img/my CV.pdf"
+                      href="./img/mycv.pdf"
                       download="my CV.pdf"
                       target="_blank"
-                      >Download CV</a
+                      ><span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      Download CV</a
                     >
                     <img src="./img/icons/download.svg" alt="download" />
                   </div>
@@ -323,9 +324,9 @@
               <div class="contacts__info-title">Linkedin</div>
               <a
                 class="contacts__info-link"
-                href="www.linkedin.com/in/yulia-chamlai"
+                href="https://www.linkedin.com/in/yulia-chamlai/"
                 target="_blank"
-                >www.linkedin.com/in/yulia-chamlai</a
+                >https://www.linkedin.com/in/yulia-chamlai/</a
               >
             </div>
           </div>
