--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body id="body" onclick="_overflow">
+  <body id="body" class="_overflow">
     <div class="wrapper">
       <!--HEADER START-->
       <div class="header-wrapper">
@@ -104,10 +104,7 @@
                       href="./img/mycv.pdf"
                       download="my CV.pdf"
                       target="_blank"
-                      ><span></span>
-                      <span></span>
-                      <span></span>
-                      <span></span>
+                    >
                       Download CV</a
                     >
                     <img src="./img/icons/download.svg" alt="download" />
@@ -187,7 +184,7 @@
               <div class="overlay">
                 <div class="overlay__title">QD-Center</div>
                 <div class="overlay__desc">
-                  Html/css/ Bootstrap/ Aadaptive version/ Slider element/
+                  Html/css/ Bootstrap/ Adaptive version/ Slider element/
                   Responsive cards/ Hover effects/ Responsive menu.
                 </div>
                 <div class="overlay__btn btn-primary">
